# unixODBC

./: .git-blame-ignore-revs  .gitignore  AUTHORS  BUILD  ChangeLog  ChangeLog~  INSTALL  MODULE.bazel  Makefile  Makefile.am  Makefile.in  Makefile.svn  README  README.AIX  README.CROSS  README.OSX  README.VMS  SECURITY.md  acinclude.m4  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac~  configure.in  libtool  stamp-h2  unixodbc.h.in  unixodbc_conf.h  unixodbc_conf.h.in  vmsbuild.com
.github/: MariaDB_odbc_data_source_template.ini  MariaDB_odbc_driver_template.ini  postgres_odbc.ini
DRVConfig/: Makefile  Makefile.in
DriverManager/: BUILD  DriverManager.exp  Makefile  Makefile.am  Makefile.in  SQLAllocConnect.c  SQLAllocConnect.lo  SQLAllocEnv.c  SQLAllocEnv.lo  SQLAllocHandle.c  SQLAllocHandle.lo  SQLAllocHandleStd.c  SQLAllocHandleStd.lo  SQLAllocStmt.c  SQLAllocStmt.lo  SQLBindCol.c  SQLBindCol.lo  SQLBindParam.c  SQLBindParam.lo  SQLBindParameter.c  SQLBrowseConnect.c  SQLBrowseConnect.lo  SQLBrowseConnectW.c  SQLBrowseConnectW.lo  SQLBulkOperations.c  SQLBulkOperations.lo  SQLCancel.c  SQLCancelHandle.c  SQLCancelHandle.lo  SQLCloseCursor.c  SQLCloseCursor.lo  SQLColAttribute.c  SQLColAttribute.lo  SQLColAttributeW.c  SQLColAttributeW.lo  SQLColAttributes.c  SQLColAttributesW.c  SQLColAttributesW.lo  SQLColumnPrivileges.c  SQLColumnPrivilegesW.c  (+186 more)
Drivers/: Makefile  Makefile.am  Makefile.in  README
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
bazel/: autotools-linux-subs.bzl  config.h.linux  unixodbc_conf.h.linux
cur/: BUILD  Makefile  Makefile.am  Makefile.in  SQLAllocHandle.c  (+98 more)
(+848 files in other folders)
